--- a/src/components/CostItem/CostItem.css
+++ b/src/components/CostItem/CostItem.css
@@ -1,11 +1,11 @@
 .cost-item {
   display: flex;
   justify-content: space-between;
-  background: radial-gradient(circle, rgba(30,62,224,1) 0%, rgba(115,0,159,1) 100%);
+  background: radial-gradient(circle, rgba(30, 62, 224, 0.63) 0%, rgba(115,0,159,1) 100%);
   padding: 20px;
-  border-radius: 6px;
   font-size: 18px;
   font-weight: 500;
+  margin-bottom: 10px;
 }
 
 .cost-item__description {
