--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,4 +3,6 @@
   -webkit-box-shadow: 4px 4px 28px 2px rgba(229, 236, 242, 0.1);
   -moz-box-shadow: 4px 4px 28px 2px rgba(229, 236, 242, 0.1);
   box-shadow: 4px 4px 28px 2px rgba(229, 236, 242, 0.1);
+  padding: 16px;
+  margin-bottom: 16px;
 }
